# b5

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  pylintrc  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  test.yml
b5/: __init__.py  exceptions.py  execute.py  init.py  main.py
b5/bash/: default_tasks.sh  functions.sh  init.sh  legacy.sh
b5/legacy/: legacy.sh
b5/legacy/modules/: bashtpl.sh  composer.sh  django.sh  docker.sh  docker_composer.sh  docker_django.sh  docker_django_solr.sh  docker_fabric_compat.sh  docker_typo3.sh  drupal.sh  fabric_compat.sh  npm.sh  typo3.sh  virtualenv.sh
b5/lib/: argumentparser.py  config.py  detect.py  importutils.py  module.py  project.py  script.py  skeleton.py  state.py  taskfile.py  template.py  version.py
b5/modules/: __init__.py  artisan.py  comlipy.py  composer.py  docker.py  jinja2.py  laravel.py  legacy.py  npm.py  pipenv.py  template.py  test.py  virtualenv.py
b5/templates/: composer.sh.jinja2  npm.sh.jinja2  pipenv.sh.jinja2  test.sh.jinja2
b5/tests/lib/: test_argumentparser.py  test_config.py
b5/tests/stubs/: config.yml  config2.yml
docs/: 00_install.md  01_concepts.md  02_Taskfile_format.md  03_common_tasks.md  04_config.md  04_config_loading.md  05_modules.md  06_project_init.md  06_templates.md  99_TODO.md
docs/modules/: artisan.md  comlipy.md  composer.md  docker.md  laravel.md  npm.md  pipenv.md  template.md  virtualenv.md
scripts/: b5-completions.nu
