[project]
name = "b5"
version = "1.4.5"
description = "b5 - simple and sane task runner"
authors = [
    {name = "David Danier",email = "danier@team23.de"}
]
license = "MIT"
readme = "README.md"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: BSD License',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Unix',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Software Development :: Build Tools',
    'Topic :: System :: Systems Administration',
]
requires-python = ">=3.9"
dependencies = [
    "Jinja2>=3.1,<4.0",
    "MarkupSafe>=3.0,<4.0",
    "PyYAML>=6.0,<7.0",
    "termcolor>=2.5,<3.0",
    "packaging>=24.0",
]

[project.urls]
Homepage = "https://github.com/team23/b5"
Repository = "https://github.com/team23/b5"
Documentation = "https://github.com/team23/b5/tree/master/docs"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "ruff>=0.9.10",
]

[project.scripts]
b5 = 'b5.main:main'
b5-init = 'b5.init:main'
b5-execute = 'b5.execute:main'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 140

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "b5",
]
